@startuml

title __GSON's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace gson {
        class com.zaozhuang.newborn.gson.DefaultTypeAdapterFactory {
            + create()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace gson {
        class com.zaozhuang.newborn.gson.FloatlNullAdapter {
            + read()
            + write()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace gson {
        class com.zaozhuang.newborn.gson.IntNullAdapter {
            + read()
            + write()
        }
      }
    }
  }
  

  com.zaozhuang.newborn.gson.DefaultTypeAdapterFactory .up.|> com.google.gson.TypeAdapterFactory
  com.zaozhuang.newborn.gson.FloatlNullAdapter -up-|> com.google.gson.TypeAdapter
  com.zaozhuang.newborn.gson.IntNullAdapter -up-|> com.google.gson.TypeAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
